website tire refactor

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Setiment</title>
+    <title>Sentiment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- ML5.js library -->
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
