--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               type="text"
               class="form-control"
               id="user_feelings"
-              placeholder="Example: I'm feeling happy today"
+              placeholder="Example: An amazing and wonderful day"
             />
           </div>
         </div>
